--- a/courflix2.0/milista.css
+++ b/courflix2.0/milista.css
@@ -130,12 +130,19 @@ body {
   font-family: helvetica;
 }
 
+.caja-total-popular {
+  position: absolute;
+  top: 200px;
+}
+
 .titulo-barra-popular {
   font-family: sans-serif;
   vertical-align: bottom;
   font-size: 16px;
   color: white;
   margin-left: 1%;
+  position: absolute;
+  top: 200px;
 }
 
 .barra-popular {
