--- a/index.css
+++ b/index.css
@@ -9,6 +9,9 @@ body {
   position: relative;
   width: 100%;
   height: 50%;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
 }
 .imagen-superior .descripcion {
   position: absolute;
@@ -123,7 +126,7 @@ body {
   display: flex;
   position: absolute;
   right: 0%;
-  top: 0%;
+  top: -30%;
   height: 50px;
   margin-right: 0px;
 }
@@ -136,12 +139,12 @@ body {
 }
 
 .titulo-barra-series {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 900;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   vertical-align: bottom;
-  font-size: 16px;
+  font-size: 28px;
   color: white;
-  margin-left: 1%;
+  margin-left: 60px;
+  margin-bottom: -13px;
 }
 
 .barra-series {
@@ -151,26 +154,35 @@ body {
   margin-top: 10px;
   margin-bottom: 40px;
   margin-right: 4px;
+  margin-left: 60px;
+  overflow: hidden;
 }
 .barra-series .caja-img-series {
   display: inline-block;
   margin: none;
-  width: 185px;
   margin-top: 10px;
   margin-bottom: 40px;
-  margin-right: 4px;
+  width: 253px;
+  height: 100%;
+  margin-right: 5px;
+  transition: width 1s, height 1s;
+  align-items: center;
 }
 .barra-series .caja-img-series .img-series {
-  width: 100%;
-  margin-right: 0px;
+  width: 253px;
+  height: 100%;
+  margin-right: 5px;
+  transition: width 1s, height 1s;
+  align-items: center;
 }
 
 .titulo-barra-tendencias {
-  font-family: sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   vertical-align: bottom;
-  font-size: 16px;
+  font-size: 28px;
   color: white;
-  margin-left: 1%;
+  margin-left: 60px;
+  margin-bottom: -13px;
 }
 
 .barra-tendencias {
@@ -180,14 +192,18 @@ body {
   margin-top: 10px;
   margin-bottom: 40px;
   margin-right: 4px;
+  margin-left: 60px;
 }
 .barra-tendencias .caja-img-tendencias {
   display: inline-block;
   margin: none;
-  width: 185px;
   margin-top: 10px;
   margin-bottom: 40px;
-  margin-right: 4px;
+  width: 253px;
+  height: 100%;
+  margin-right: 5px;
+  transition: width 1s, height 1s;
+  align-items: center;
 }
 .barra-tendencias .caja-img-tendencias .img-tendencias {
   width: 100%;
@@ -195,25 +211,34 @@ body {
 }
 
 .titulo-barra-continuarviendo {
-  font-family: sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   vertical-align: bottom;
-  font-size: 16px;
+  font-size: 28px;
   color: white;
-  margin-left: 1%;
+  margin-left: 60px;
+  margin-bottom: -13px;
 }
 
 .barra-continuarviendo {
   width: 100%;
   height: auto;
   overflow-x: hidden;
+  margin-top: 10px;
+  margin-bottom: 40px;
+  margin-right: 4px;
+  margin-left: 60px;
+  overflow: hidden;
 }
 .barra-continuarviendo .caja-img-continuarviendo {
   display: inline-block;
   margin: none;
-  width: 185px;
   margin-top: 10px;
   margin-bottom: 40px;
-  margin-right: 4px;
+  width: 253px;
+  height: 100%;
+  margin-right: 5px;
+  transition: width 1s, height 1s;
+  align-items: center;
 }
 .barra-continuarviendo .caja-img-continuarviendo .img-continuarviendo {
   width: 100%;
