--- a/index.scss
+++ b/index.scss
@@ -8,11 +8,16 @@ body {
     margin: 0%;
     position: relative;
     overflow-x: hidden;
+   
 } 
 .imagen-superior {
     position: relative;
     width: 100%;
     height: 50%;
+    display: flex;
+    justify-content: center;
+   
+    overflow: hidden;
     .descripcion {
          position: absolute;
          bottom: 70px;
@@ -135,7 +140,7 @@ body {
     display: flex;
     position: absolute;
     right: 0%;
-    top: 0%;
+    top: -30%;
     height: 50px;
     margin-right: 0px;
 
@@ -150,12 +155,13 @@ body {
 
 }
 .titulo-barra-series {
-    font-family:  Arial, Helvetica, sans-serif;
-    font-weight: 900;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    // font-weight: 900;
     vertical-align: bottom;
-    font-size: 16px;
+    font-size: 28px;
     color: white;
-    margin-left: 1%; 
+    margin-left: 60px;
+    margin-bottom: -13px;
     
 }
 .barra-series {
@@ -165,29 +171,40 @@ body {
     margin-top: 10px;
     margin-bottom: 40px;
     margin-right: 4px;
+    margin-left: 60px;
+    overflow: hidden;
    
     .caja-img-series {
         display: inline-block;
         margin: none;
-        width: 185px;
+       
+        // width: 185px;
         margin-top: 10px;
         margin-bottom: 40px;
-        margin-right: 4px;
-        
+        width: 253px;
+        height: 100%;
+        margin-right: 5px;
+        transition: width 1s, height 1s;
+        align-items: center;
         
         .img-series {
-            width: 100%;
-            margin-right: 0px;
-            
+            // width: 100%;
+            // margin-right: 0px;
+        width: 253px;
+        height: 100%;
+        margin-right: 5px;
+        transition: width 1s, height 1s;
+        align-items: center;
         }
     }
 }
 .titulo-barra-tendencias {
-    font-family:  sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     vertical-align: bottom;
-    font-size: 16px;
+    font-size: 28px;
     color: white;
-    margin-left: 1%;
+    margin-left: 60px;
+    margin-bottom: -13px;
     
 }
 .barra-tendencias {
@@ -197,14 +214,21 @@ body {
     margin-top: 10px;
     margin-bottom: 40px;
     margin-right: 4px;
+    margin-left: 60px;
+    
+    
     .caja-img-tendencias {
         display: inline-block;
         margin: none;
-        width: 185px;
+       
+        // width: 185px;
         margin-top: 10px;
         margin-bottom: 40px;
-        margin-right: 4px;
-        
+        width: 253px;
+        height: 100%;
+        margin-right: 5px;
+        transition: width 1s, height 1s;
+        align-items: center;
         
         .img-tendencias {
             width: 100%;
@@ -213,24 +237,34 @@ body {
     }
 }
 .titulo-barra-continuarviendo{
-    font-family:  sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     vertical-align: bottom;
-    font-size: 16px;
+    font-size: 28px;
     color: white;
-    margin-left: 1%;
+    margin-left: 60px;
+   margin-bottom: -13px;
 }
 .barra-continuarviendo {
     width: 100%;
     height: auto;
     overflow-x: hidden;
-    
+    margin-top: 10px;
+    margin-bottom: 40px;
+    margin-right: 4px;
+    margin-left: 60px;
+    overflow: hidden;
     .caja-img-continuarviendo {
         display: inline-block;
         margin: none;
-        width: 185px;
+       
+        // width: 185px;
         margin-top: 10px;
         margin-bottom: 40px;
-        margin-right: 4px;
+        width: 253px;
+        height: 100%;
+        margin-right: 5px;
+        transition: width 1s, height 1s;
+        align-items: center;
         
         .img-continuarviendo {
             width: 100%;
